<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".src.ui.main.LandingPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ugly_blue"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ActionBarCustom"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/my_toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="0dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextAppearance="@style/TextLimitStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_title"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:counterEnabled="true"
                app:counterMaxLength="400"
                app:counterTextAppearance="@style/TextLimitStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_description"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:maxLength="4000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_description">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableRight="@drawable/ic_category"
                    android:focusable="false"
                    android:hint="@string/hint_post_categories"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_categories"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_budget"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_categories"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawablePadding="@dimen/padding_20"
                    android:focusable="false"
                    android:textColor="@color/silver" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_budget"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_post_rate" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_currency"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_post_payment_method" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_rate">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableRight="@drawable/ic_location"
                    android:drawableEnd="@drawable/ic_location"
                    android:focusable="false"
                    android:hint="@string/hint_post_location" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_s_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_location"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_s_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_post_start_date"
                    android:inputType="textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/post_job_term"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_location"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_post_job_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/hint_post_job_term" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="-0.01"
                android:paddingBottom="@dimen/padding_15"
                android:text="@string/txt_post_attachments"
                android:textColor="#de828282"
                android:textSize="@dimen/text_size_15"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_s_date" />


        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_100"
            android:layout_below="@+id/form_container"
            android:background="@color/attachment_background">

            <ImageButton
                android:id="@+id/add_attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>